# Trabalho-Final-PDS2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
CPPs/: Ataque.cpp  Bot.cpp  Cura.cpp  Estamina.cpp  Item.cpp  Jogador.cpp  Jogo.cpp  Monstrinho.cpp  Revive.cpp  Treinador.cpp
CPPs/Itens/: Cura.cpp  Estamina.cpp  Item.cpp  Revive.cpp
CSVs/: Ataques.csv  Monstrinhos.csv
DOC/: UML Trabalho Final.drawio
DOC/doxygen/html/: AtaqueError_8hpp_source.html  Ataque_8hpp.html  Ataque_8hpp__dep__incl.map  Ataque_8hpp__dep__incl.md5  Ataque_8hpp__incl.map  Ataque_8hpp__incl.md5  Ataque_8hpp_source.html  BadRequestError_8hpp_source.html  Bot_8hpp.html  Bot_8hpp__dep__incl.map  Bot_8hpp__dep__incl.md5  Bot_8hpp__incl.map  Bot_8hpp__incl.md5  Bot_8hpp_source.html  CuraError_8hpp_source.html  Cura_8hpp.html  Cura_8hpp__incl.map  Cura_8hpp__incl.md5  Cura_8hpp_source.html  EscolhaError_8hpp_source.html  EstaminaError_8hpp_source.html  Estamina_8hpp.html  Estamina_8hpp__incl.map  Estamina_8hpp__incl.md5  Estamina_8hpp_source.html  ItemError_8hpp_source.html  Item_8hpp.html  (+203 more)
ERR/: AtaqueError.hpp  BadRequestError.hpp  CuraError.hpp  EscolhaError.hpp  EstaminaError.hpp  ItemError.hpp  ReviveError.hpp
HPPs/: Ataque.hpp  Bot.hpp  Cura.hpp  Estamina.hpp  Item.hpp  Jogador.hpp  Jogo.hpp  Monstrinho.hpp  Revive.hpp  Treinador.hpp
HPPs/Itens-hpp/: Cura.hpp  Estamina.hpp  Item.hpp  Revive.hpp
Tests/: Ataques.test.cpp  Bot.test.cpp  CMakeLists.txt  Itens.test.cpp  Jogador.test.cpp  Jogo.test.cpp  Monstrinho.test.cpp  Monstrinhos.test.cpp  Treinador.test.cpp
principal/: main.cpp
(+137 files in other folders)
